--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
 
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./assets/images/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
 
     <title>Frontend Mentor | Results summary component</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@500;700;800&display=swap"
+      rel="stylesheet" />
+
     <script defer src="main.js" type="module"></script>
     <style>
       .attribution {
@@ -24,11 +27,48 @@
     </style>
   </head>
   <body>
-    <div class="attribution">
+    <main class="Main">
+      <div class="Content u-wrapper">
+        <section class="Result">
+          <h1 class="Result-h1">Your Result</h1>
+          <div class="Result-score">
+            <span class="Result-number">76</span
+            ><span class="Result-of">of 100</span>
+          </div>
+          <div class="Result-text">
+            <h2 class="Result-h2">Great</h2>
+            <p class="Result-p">
+              Your performance exceed 65% of the people conducting the test
+              here!
+            </p>
+          </div>
+        </section>
+        <section class="Summary">
+          <h2 class="Summary-h2">Summary</h2>
+          <ul class="Summary-ul">
+            <li class="Summary-li">
+              <span class="Summary-item">Reaction</span>
+              <span class="Summary-score">80</span> / 100
+            </li>
+            <li class="Summary-li">
+              Memory<span class="Summary-score">92</span> / 100
+            </li>
+            <li class="Summary-li">
+              Verbal<span class="Summary-score">61</span> / 100
+            </li>
+            <li class="Summary-li">
+              Visual<span class="Summary-score">73</span> / 100
+            </li>
+          </ul>
+          <button class="Summary-btn">Continue</button>
+        </section>
+      </div>
+    </main>
+    <!-- <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Your Name Here</a>.
-    </div>
+    </div> -->
   </body>
 </html>
