summary section / responsive

--- a/index.html
+++ b/index.html
@@ -47,17 +47,56 @@
           <h2 class="Summary-h2">Summary</h2>
           <ul class="Summary-ul">
             <li class="Summary-li">
-              <span class="Summary-item">Reaction</span>
-              <span class="Summary-score">80</span> / 100
+              <div class="Summary-title">
+                <img
+                  class="Summary-icon"
+                  src="assets/images/icon-reaction.svg"
+                  alt="icon reaction" />
+                <p class="Summary-p">Reaction</p>
+              </div>
+
+              <div class="Summary-score">
+                <span class="Summary-span">80</span> / 100
+              </div>
             </li>
             <li class="Summary-li">
-              Memory<span class="Summary-score">92</span> / 100
+              <div class="Summary-title">
+                <img
+                  class="Summary-icon"
+                  src="assets/images/icon-memory.svg"
+                  alt="icon memory" />
+                <p class="Summary-p">Memory</p>
+              </div>
+
+              <div class="Summary-score">
+                <span class="Summary-span">92</span> / 100
+              </div>
             </li>
             <li class="Summary-li">
-              Verbal<span class="Summary-score">61</span> / 100
+              <div class="Summary-title">
+                <img
+                  class="Summary-icon"
+                  src="assets/images/icon-verbal.svg"
+                  alt="icon verbal" />
+                <p class="Summary-p">Verbal</p>
+              </div>
+
+              <div class="Summary-score">
+                <span class="Summary-span">61</span> / 100
+              </div>
             </li>
             <li class="Summary-li">
-              Visual<span class="Summary-score">73</span> / 100
+              <div class="Summary-title">
+                <img
+                  class="Summary-icon"
+                  src="assets/images/icon-visual.svg"
+                  alt="icon visual" />
+                <p class="Summary-p">Visual</p>
+              </div>
+
+              <div class="Summary-score">
+                <span class="Summary-span">73</span> / 100
+              </div>
             </li>
           </ul>
           <button class="Summary-btn">Continue</button>
