--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
 
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favicon-32x32.png" />
 
     <title>Frontend Mentor | Results summary component</title>
 
@@ -15,7 +19,7 @@
       href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@500;700;800&display=swap"
       rel="stylesheet" />
 
-    <script defer src="main.js" type="module"></script>
+    <script defer src="./main.js" type="module"></script>
     <style>
       .attribution {
         font-size: 11px;
@@ -50,7 +54,7 @@
               <div class="Summary-title">
                 <img
                   class="Summary-icon"
-                  src="assets/images/icon-reaction.svg"
+                  src="./assets/images/icon-reaction.svg"
                   alt="icon reaction" />
                 <p class="Summary-p">Reaction</p>
               </div>
@@ -63,7 +67,7 @@
               <div class="Summary-title">
                 <img
                   class="Summary-icon"
-                  src="assets/images/icon-memory.svg"
+                  src="./assets/images/icon-memory.svg"
                   alt="icon memory" />
                 <p class="Summary-p">Memory</p>
               </div>
@@ -76,7 +80,7 @@
               <div class="Summary-title">
                 <img
                   class="Summary-icon"
-                  src="assets/images/icon-verbal.svg"
+                  src="./assets/images/icon-verbal.svg"
                   alt="icon verbal" />
                 <p class="Summary-p">Verbal</p>
               </div>
@@ -89,7 +93,7 @@
               <div class="Summary-title">
                 <img
                   class="Summary-icon"
-                  src="assets/images/icon-visual.svg"
+                  src="./assets/images/icon-visual.svg"
                   alt="icon visual" />
                 <p class="Summary-p">Visual</p>
               </div>
